# svbar

./: .gitignore  Cargo.toml  README.md
src/: main.rs  todo
src/app/: application.rs  config.rs  drawing.rs  input.rs  mod.rs
src/modules/: audio.rs  clock.rs  mod.rs  module.rs
svbar_volume/: Cargo.toml
svbar_volume/src/: lib.rs
