[package]
name = "svbar"
version = "0.1.0"
edition = "2024"

[dependencies]
# window
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
ab_glyph = "0.2.32"
ctrlc = "3.5.1"

# modules
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
volume = { path = "./svbar_volume/" }
